/*
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements. See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership. The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License. You may obtain a copy of the License at
 *
 *   http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing,
 * software distributed under the License is distributed on an
 * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
 * KIND, either express or implied. See the License for the
 * specific language governing permissions and limitations
 * under the License.
 *
 */

syntax = "proto3";

option java_multiple_files = true;
package org.apache.custos.resource.secret.service;


enum ResourceOwnerType {
    TENANT_USER = 0;
    CUSTOS = 1;
    TENANT = 2;
}

enum ResourceType {
    SERVER_CERTIFICATE = 0;
    RAW = 1;
    JWT_CERTIFICATE = 2;
}

enum ResourceSource {
    KUBE = 0;
    LOCAL = 1;
    EXTERNAL = 2;
    LETSENCRYPT = 3;
}

message SecretMetadata {
    ResourceOwnerType owner_type = 1;
    ResourceType resource_type = 2;
    ResourceSource source = 3;
    string name = 4;
    string value = 5;
}


message GetSecretRequest {
    SecretMetadata metadata = 1;
    int64 tenantId = 2;
    string clientId = 3;
    string clientSec = 4;
    string accessToken = 5;
}


service ResourceSecretService {
    rpc getSecret (GetSecretRequest) returns (SecretMetadata);
}